objects/Contractors__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select whether the contractor is active or not</description>
        <inlineHelpText>Select whether the contractor is active or not</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>Select the areas where the contractor will work</description>
        <inlineHelpText>Select the areas where the contractor will work</inlineHelpText>
        <label>Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Service Areas</fullName>
                </value>
                <value>
                    <fullName>Cleveland</fullName>
                </value>
                <value>
                    <fullName>East Side Only</fullName>
                    <label>East Side Only (Cleveland)</label>
                </value>
                <value>
                    <fullName>East Side Preferred</fullName>
                    <label>East Side Preferred (Cleveland)</label>
                </value>
                <value>
                    <fullName>West Side Only</fullName>
                    <label>West Side Only (Cleveland)</label>
                </value>
                <value>
                    <fullName>West Side Preferred</fullName>
                    <label>West Side Preferred (Cleveland)</label>
                </value>
                <value>
                    <fullName>Suburbs</fullName>
                </value>
                <value>
                    <fullName>Eastern Suburbs</fullName>
                </value>
                <value>
                    <fullName>Southern Suburbs</fullName>
                </value>
                <value>
                    <fullName>Western Suburbs</fullName>
                </value>
                <value>
                    <fullName>Suburbs Preferred</fullName>
                </value>
                <value>
                    <fullName>Cleveland Preferred</fullName>
                </value>
                <value>
                    <fullName>Cuyahoga County</fullName>
                </value>
                <value>
                    <fullName>Geauga County</fullName>
                </value>
                <value>
                    <fullName>Lake County</fullName>
                </value>
                <value>
                    <fullName>Lorain County</fullName>
                </value>
                <value>
                    <fullName>Medina County</fullName>
                </value>
                <value>
                    <fullName>Portage County</fullName>
                </value>
                <value>
                    <fullName>Stark County</fullName>
                </value>
                <value>
                    <fullName>Summit County</fullName>
                </value>
                <value>
                    <fullName>Trumbull County</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Address__c</fullName>
        <description>Business Address for Contractors</description>
        <label>Business Address</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Cell__c</fullName>
        <description>Business cell for the Contractor</description>
        <inlineHelpText>Business cell for the Contractor</inlineHelpText>
        <label>Business Cell</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Email__c</fullName>
        <inlineHelpText>Enter in a business email for the contractor</inlineHelpText>
        <label>Business Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Fax__c</fullName>
        <description>Business fax for the Contractor</description>
        <inlineHelpText>Business fax for the Contractor</inlineHelpText>
        <label>Business Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <description>Business phone for the Contractor</description>
        <inlineHelpText>Business phone for the Contractor</inlineHelpText>
        <label>Business Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Website__c</fullName>
        <description>Business website for the Contractor</description>
        <inlineHelpText>Business website for the Contractor</inlineHelpText>
        <label>Business Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>City_c__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>City</label>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Contractors</relationshipLabel>
        <relationshipName>Contractors</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commercial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select whether the contractor works on commercial projects</description>
        <inlineHelpText>Select whether the contractor works on commercial projects</inlineHelpText>
        <label>Commercial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Enter the name of the contact for the contractor</description>
        <label>Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Enter the county in which the contractor resides</inlineHelpText>
        <label>County</label>
        <referenceTo>County__c</referenceTo>
        <relationshipLabel>Contractors</relationshipLabel>
        <relationshipName>Contractors</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select whether or not to share the contractor with homeowners</description>
        <inlineHelpText>Select whether or not to share the contractor with homeowners</inlineHelpText>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Female__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select whether the contractor is female or not</description>
        <inlineHelpText>Select whether the contractor is female or not</inlineHelpText>
        <label>Female</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Limitations__c</fullName>
        <description>Enter any limitations the contractor has</description>
        <inlineHelpText>Enter any limitations the contractor has</inlineHelpText>
        <label>Limitations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Minimum_Amount__c</fullName>
        <description>Enter the minimum amount the contractor will work for</description>
        <inlineHelpText>Enter the minimum amount the contractor will work for</inlineHelpText>
        <label>Minimum</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minority__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select whether the contractor can be described as minority</description>
        <inlineHelpText>Select whether the contractor can be described as minority</inlineHelpText>
        <label>Minority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_Contractor__c</fullName>
        <inlineHelpText>Enter any additional notes on the contractor here</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Phone_Ext__c</fullName>
        <description>Business phone ext. for the Contractor</description>
        <inlineHelpText>Business phone ext. for the Contractor</inlineHelpText>
        <label>Phone Ext.</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Size__c</fullName>
        <inlineHelpText>Select the optimal project size the contractor would work on</inlineHelpText>
        <label>Project Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Residential__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select whether the contractor works on residential projects</description>
        <inlineHelpText>Select whether the contractor works on residential projects</inlineHelpText>
        <label>Residential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SV__c</fullName>
        <description>Enter the site visit charge for the contractor</description>
        <inlineHelpText>Enter the site visit charge for the contractor</inlineHelpText>
        <label>SV Charge</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_Documentation__c</fullName>
        <description>Provide an explanation of this contractor&apos;s performance</description>
        <label>Share Documentation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Share__c</fullName>
        <description>Should we share this contractor with other homeowners? Requires the contractor referral form to select yes</description>
        <inlineHelpText>Select &quot;Yes&quot; or &quot;No&quot;. Requires the contractor consent (referral form) to select yes</inlineHelpText>
        <label>Share?</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <description>Select the size of the contractor company</description>
        <inlineHelpText>Select the size of the contractor company</inlineHelpText>
        <label>Company Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small (1-5)</fullName>
                </value>
                <value>
                    <fullName>Medium (6-15)</fullName>
                </value>
                <value>
                    <fullName>Large (&gt;15)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Business address for the Contractor</description>
        <inlineHelpText>Business address for the Contractor</inlineHelpText>
        <label>State</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trade__c</fullName>
        <inlineHelpText>Select which fields the contractor works in</inlineHelpText>
        <label>Trade</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Additions</fullName>
                </value>
                <value>
                    <fullName>Appraisal</fullName>
                </value>
                <value>
                    <fullName>Arborist</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Art Conservation</fullName>
                </value>
                <value>
                    <fullName>Asbestos Removal</fullName>
                </value>
                <value>
                    <fullName>Asphalt</fullName>
                </value>
                <value>
                    <fullName>Awnings</fullName>
                </value>
                <value>
                    <fullName>Cabinetry</fullName>
                </value>
                <value>
                    <fullName>Carpentry</fullName>
                </value>
                <value>
                    <fullName>Chimney Repair</fullName>
                </value>
                <value>
                    <fullName>Chimney Sweep</fullName>
                </value>
                <value>
                    <fullName>Chimney Tuckpointing</fullName>
                </value>
                <value>
                    <fullName>Commercial &amp; Residential</fullName>
                </value>
                <value>
                    <fullName>Commercial Only</fullName>
                </value>
                <value>
                    <fullName>Concrete</fullName>
                </value>
                <value>
                    <fullName>Demolition</fullName>
                </value>
                <value>
                    <fullName>Design/Build</fullName>
                </value>
                <value>
                    <fullName>Drain Cameras</fullName>
                </value>
                <value>
                    <fullName>Drywall</fullName>
                </value>
                <value>
                    <fullName>Duct Cleaning</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Energy Audit</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>Environmental Remediation</fullName>
                </value>
                <value>
                    <fullName>Excavation</fullName>
                </value>
                <value>
                    <fullName>Fencing</fullName>
                </value>
                <value>
                    <fullName>Fireplace</fullName>
                </value>
                <value>
                    <fullName>Fixture Repair</fullName>
                </value>
                <value>
                    <fullName>Floor Installation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updated__c</fullName>
        <description>enter the date the contractor was last updated</description>
        <label>Record Updated On:</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>W9_Received_On__c</fullName>
        <inlineHelpText>Enter the date we received the W9</inlineHelpText>
        <label>W9 Received On:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>W9__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select whether we have a W9 for the contractor</inlineHelpText>
        <label>W9</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>Business address for the Contractor</description>
        <inlineHelpText>Business address for the Contractor</inlineHelpText>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Referrals__c</fullName>
        <label># of Referrals</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contractors</label>
    <listViews>
        <fullName>Active_Contractors</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <columns>Business_Phone__c</columns>
        <columns>Active__c</columns>
        <columns>Trade__c</columns>
        <columns>Minimum_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Trade__c</field>
            <operation>includes</operation>
            <value>Roofing</value>
        </filters>
        <label>Active Contractors</label>
    </listViews>
    <listViews>
        <fullName>All_Contractors</fullName>
        <columns>Share__c</columns>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <columns>Business_Phone__c</columns>
        <columns>Area__c</columns>
        <columns>Trade__c</columns>
        <columns>Notes_Contractor__c</columns>
        <columns>Minimum_Amount__c</columns>
        <columns>City_c__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Share__c</field>
            <operation>contains</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Area__c</field>
            <operation>includes</operation>
            <value>All Service Areas,Suburbs,Eastern Suburbs,Suburbs Preferred,Cuyahoga County</value>
        </filters>
        <filters>
            <field>Trade__c</field>
            <operation>includes</operation>
            <value>Carpentry,General Contractor,Restoration</value>
        </filters>
        <label>All Contractors</label>
    </listViews>
    <listViews>
        <fullName>All_Contractors_Filter_by_Trade</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <columns>Trade__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Trade__c</field>
            <operation>equals</operation>
            <value>Roofing</value>
        </filters>
        <label>All Contractors Filter by Trade</label>
    </listViews>
    <listViews>
        <fullName>Drywall</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Area__c</columns>
        <columns>Business_Phone__c</columns>
        <columns>Trade__c</columns>
        <columns>Notes_Contractor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Trade__c</field>
            <operation>includes</operation>
            <value>Drywall</value>
        </filters>
        <label>Drywall</label>
    </listViews>
    <listViews>
        <fullName>General</fullName>
        <columns>NAME</columns>
        <columns>Business_Address__c</columns>
        <columns>Area__c</columns>
        <columns>Business_Cell__c</columns>
        <columns>Business_Phone__c</columns>
        <columns>Business_Email__c</columns>
        <columns>Trade__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Share__c</columns>
        <columns>Exclude__c</columns>
        <columns>Minimum_Amount__c</columns>
        <columns>Notes_Contractor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Trade__c</field>
            <operation>includes</operation>
            <value>General Contractor</value>
        </filters>
        <filters>
            <field>Share__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>General Contractors</label>
    </listViews>
    <listViews>
        <fullName>Interior_Remodeling</fullName>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <columns>Business_Cell__c</columns>
        <columns>City_c__c</columns>
        <columns>Area__c</columns>
        <columns>Trade__c</columns>
        <columns>Notes_Contractor__c</columns>
        <columns>Minimum_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Trade__c</field>
            <operation>includes</operation>
            <value>Interior Remodeling</value>
        </filters>
        <filters>
            <field>Share__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Area__c</field>
            <operation>includes</operation>
            <value>All Service Areas,Western Suburbs,Cuyahoga County</value>
        </filters>
        <label>Interior Remodeling</label>
    </listViews>
    <listViews>
        <fullName>Paving</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Area__c</columns>
        <columns>Business_Phone__c</columns>
        <columns>Notes_Contractor__c</columns>
        <columns>Trade__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Trade__c</field>
            <operation>includes</operation>
            <value>Asphalt</value>
        </filters>
        <filters>
            <field>Trade__c</field>
            <operation>includes</operation>
            <value>Concrete</value>
        </filters>
        <label>Paving</label>
    </listViews>
    <listViews>
        <fullName>Waterproofing</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Area__c</columns>
        <columns>Business_Phone__c</columns>
        <columns>Trade__c</columns>
        <columns>Notes_Contractor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Trade__c</field>
            <operation>includes</operation>
            <value>Waterproofing</value>
        </filters>
        <label>Waterproofing</label>
    </listViews>
    <listViews>
        <fullName>masonry</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Area__c</columns>
        <columns>Business_Phone__c</columns>
        <columns>Trade__c</columns>
        <columns>Notes_Contractor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Trade__c</field>
            <operation>includes</operation>
            <value>Masonry</value>
        </filters>
        <label>Masonry</label>
    </listViews>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contractors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>